load(
    "//ign_bazel:qt.bzl",
    "qt_resource",
    "qt_cc_library",
    "qt_cc_binary",
)

files = [
    "HelloPlugin.qml",
]

qrc_file = "hello.qrc"

sources = [
    "HelloPlugin.cc",
]

headers = [
    "HelloPlugin.hh",
]

name = "hello_plugin"
outfile = "qrc_resources.cpp"
genrule(
    name = "hello_plugin_gen",
    srcs = [qrc_file] + files,
    outs = [outfile],
    #cmd = "cd ign_gui/include/ignition/gui && touch %s && rcc --name %s --output $(OUTS) %s" % (outfile, rsrc_name, qrc_file),
    cmd = "cd ign_gui/examples/plugin/hello_plugin && rcc --name name --output %s %s && cp %s ../../../../$(OUTS)" % (outfile, qrc_file, outfile),
)
cc_library(
    name = "hello_plugin",
    srcs = [outfile],
    alwayslink = 1,
    visibility = ["//visibility:public"],
)

qt_cc_binary(
    name = "HelloPlugin.so",
    srcs = sources,
    hdrs = headers,
    linkshared = True,
    includes = ["."],
    linkopts = [
        "-Wl,-soname,HelloPlugin.so",
        "-ltinyxml2",
    ],
    copts = [
        "-Iexternal/qt/QtCore",
        "-Iexternal/qt/QtGui",
        "-Iexternal/qt/QtQuick",
        "-Iexternal/qt/QtQuickControls2",
        "-Iexternal/qt/QtWidgets",
        "-Iexternal/qt/QtQml",
    ],  
    deps = [
        "//ign_plugin/loader",
        "//ign_plugin/register",
        "//ign_gui",
        ":hello_plugin",
        "@qt//:qt_core",
        "@qt//:qt_network",
        "@qt//:qt_widgets",
        "@qt//:qt_quick_control",
        "@qt//:qt_quick",
        "@qt//:qt_qml",
        "@qt//:qt_gui",
        "@qt//:qt_opengl",
    ],
    data = files,
    visibility = ["//visibility:public"],
)
